本地读取电子书并朗读

--- a/app/src/main/res/values/strings_label.xml
+++ b/app/src/main/res/values/strings_label.xml
@@ -13,5 +13,8 @@
     <string name="label_copy_to_clipboard">复制到粘贴板</string>
 
     <string name="label_begin_read">开始朗读</string>
+    <string name="label_pause">暂停</string>
+    <string name="label_continue">继续</string>
+    <string name="label_stop">停止</string>
 
 </resources>
